app/styles/components/code.css
    .shiki-wrapper {
        position: relative;
    }

    .shiki-wrapper .button--copy {
        position: absolute;
        top: 2px;
        right: 2px;
        display: grid;
        place-content: center;

    }

    .shiki-wrapper pre {
        max-height: 30rem;
        padding: 0.5em;
        padding-inline-end: 3em;
        margin-block: 0;
        border: var(--border-thick);
        border-radius: var(--radius-md);
        overflow: auto;
        white-space: pre-wrap;
        word-break: break-word;
        overflow-wrap: break-word;

        scrollbar-width: auto;
        scrollbar-color: var(--color-neutral-200) transparent;

        &::-webkit-scrollbar {
            height: 10px;
            width: 10px;
        }

        &::-webkit-scrollbar-thumb {
            background-color: var(--color-neutral-100);
            border-radius: var(--radius-sm);
        }
    }

    /* .shiki-wrapper[data-width="full"] pre {
            width: fit-content;
            max-width: 100%;
        } */

    @media (max-width: 768px) {
        .shiki-wrapper pre {
            max-height: 24rem;
            padding-inline-end: 0;
        }
    }

    .shiki-inline {
        /* theme colors */
        background-color: var(--color-code-dark);
        color: var(--color-code-light);
        /* theme colors */
        border: var(--border-thin);
        padding: 0.125em 0.2em;
        border-radius: var(--radius-md);
    }

